--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "eslint-config-standard-with-typescript": "^34.0.1"
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "standard": "^17.0.0"
   }
 }
