ADD: Card Component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "@database:": ["database/db.ts"]
+      "@database:": ["database/db.ts"],
+      "@components": ["components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
